--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,10 @@
 	
 }
 .testimonial{
-	background-color:wheat;
+	background-color:#f5f5f5;
 	padding:15px;
 	/* margin-bottom:20px; */
-	border:1px solid red;
+	border:1px solid black;
 	margin-bottom: 15px;
 	
 	
